# submarine-simulator-game

./: .gitignore  CMakeLists.txt  README.md  gamemode1.h  main.cpp  player.cpp  state.h
AsianSpaceSimulator/: CMakeLists.txt  entity.h  gamemode1.cpp  menu.cpp  menu.h  player.h  playerobject.h
SubmarineSimulator/: CMakeLists.txt
SubmarineSimulator/Graphics/Sprites/: fighterDamaged1.ai
SubmarineSimulator/Include/Core/: app.h  audioLoader.h  entity.h  entityManager.h  machine.h  pauseableClock.h  playerLives.h  score.h  state.h  utilities.h
SubmarineSimulator/Include/Entities/: boss.h  bullet.h  dynamicBar.h  enemy.h  enemy2.h  healthPack.h  indestructableObject.h  player.h  shieldEntity.h
SubmarineSimulator/Include/States/: stateCredits.h  stateGameMode1.h  stateGameMode2.h  stateGameOver.h  stateHelp.h  stateHighscore.h  stateKeybindings.h  stateMainMenu.h  statePlayConfig.h  stateSettings.h
SubmarineSimulator/Source/: jsoncpp.cpp
SubmarineSimulator/Source/Core/: app.cpp  audioLoader.cpp  machine.cpp  playerLives.cpp  score.cpp
SubmarineSimulator/Source/Entities/: boss.cpp  enemy.cpp  healthPack.cpp
SubmarineSimulator/Source/States/: stateCredits.cpp  stateHelp.cpp  stateHighscore.cpp  stateKeybindings.cpp  statePlayConfig.cpp  stateSettings.cpp
Vietnamese_Space_Program/: CMakeLists.txt  Scorestatus.txt  config.json  highscore.txt
Vietnamese_Space_Program/Graphics/Sprites/: asteroid.ai  fighter.ai  table.psd
Vietnamese_Space_Program/Header Files/Core/: app.h  dynamicBar.h  entity.h  entityManager.h  machine.h  playerLives.h  score.h  state.h  util.h
Vietnamese_Space_Program/Header Files/Entities/: BulletEntity.h  asteroid.h  boss1.h  bullet.h  bulletObject.h  bullet_entity.h  button.h  enemy.h  enemyEntity.h  enemy_entity.h  healthPack.h  overheat.h  player.h  playerLives.h  playerobject.h
Vietnamese_Space_Program/Header Files/States/: StateGameMode1.h  StateGameMode2.h  StateGameOver.h  StateHighscore.h  StateKeybindings.h  StateMainMenu.h  StatePlayConfig.h  StateSettings.h  gamemode1.h  highscoreState.h  menu.h  playconfig.h  score.h  settingsState.h  stateGameMode1.h  stateGameMode2.h  stateGameOver.h  stateHighscoreState.h  stateKeybindings.h  stateMainMenu.h  stateMenu.h  statePlayConfig.h  stateSettings.h
Vietnamese_Space_Program/Include/Core/: HighscoreConfig.h  app.h  audioLoader.h  entity.h  entityManager.h  machine.h  pauseableClock.h  playerLives.h  resourceManager.h  score.h  soundLoader.h  state.h  util.h  utilities.h  waveManager.h
Vietnamese_Space_Program/Include/Entities/: asteroid.h  boss.h  boss1.h  bullet.h  buttons.h  dynamicBar.h  enemy.h  enemy2.h  healthPack.h  indestructableObject.h  overheat.h  player.h  shieldEntity.h  shieldPowerUp.h
Vietnamese_Space_Program/Include/States/: StateGameMode1.h  StateGameMode2.h  StateGameOver.h  StateHighscore.h  StateKeybindings.h  StateMainMenu.h  StatePlayConfig.h  StateSettings.h  stateGameMode1.h  stateGameMode2.h  stateGameOver.h  stateHelp.h  stateHighscore.h  stateKeybindings.h  stateMainMenu.h  statePlayConfig.h  stateSettings.h
Vietnamese_Space_Program/Source Files/: main.cpp
Vietnamese_Space_Program/Source Files/Core/: app.cpp  button.cpp  dynamicBar.cpp  entity.cpp  entityManager.cpp  machine.cpp  playerLives.cpp  score.cpp
Vietnamese_Space_Program/Source Files/Entities/: asteroid.cpp  boss1.cpp  bullet.cpp  bullets.cpp  enemy.cpp  healthPack.cpp  overheat.cpp  player.cpp  playerLives.cpp
Vietnamese_Space_Program/Source Files/States/: StateGameMode1.cpp  StateGameMode2.cpp  StateGameOver.cpp  StateHighscore.cpp  StateKeybindings - Copy.cpp  StateKeybindings.cpp  StateMainMenu.cpp  StatePlayConfig.cpp  StateSettings.cpp  gamemode1.cpp  highscoreState.cpp  menu.cpp  playconfig.cpp  score.cpp  settingsState.cpp  stateGameMode1.cpp  stateGameMode2.cpp  stateGameOver.cpp  stateHighscoreState.cpp  stateKeybindings.cpp  stateMainMenu.cpp  stateMenu.cpp  statePlayConfig.cpp  stateSettings.cpp
Vietnamese_Space_Program/Source/Core/: HighscoreConfig.cpp  app.cpp  entity.cpp  entityManager.cpp  machine.cpp  pauseableClock.cpp  playerLives.cpp  resourceManager.cpp  score.cpp  soundLoader.cpp  utilities.cpp  waveManager.cpp
Vietnamese_Space_Program/Source/Entities/: asteroid.cpp  boss1.cpp  bullet.cpp  button.cpp  buttons.cpp  dynamicBar.cpp  enemy.cpp  enemy2.cpp  healthPack.cpp  indestructableObject.cpp  overheat.cpp  player.cpp  shieldEntity.cpp  shieldPowerUp.cpp
Vietnamese_Space_Program/Source/States/: StateGameMode1.cpp  StateGameMode2.cpp  StateGameOver.cpp  StateHighscore.cpp  StateMainMenu.cpp  StatePlayConfig.cpp  StateSettings.cpp  stateGameMode1.cpp  stateGameMode2.cpp  stateGameOver.cpp  stateHelp.cpp  stateHighscore.cpp  stateKeybindings.cpp  stateMainMenu.cpp  statePlayConfig.cpp  stateSettings.cpp
source/Vietnamese_Space_Program/: CMakeLists.txt
source/Vietnamese_Space_Program/Include/Core/: app.h  entityManager.h  machine.h  state.h
source/Vietnamese_Space_Program/Include/Entities/: boss1.h  dynamicBar.h  enemy2.h  healthPack.h  player.h  shieldEntity.h
source/Vietnamese_Space_Program/Include/States/: stateGameMode1.h  stateGameOver.h  stateHighscore.h  stateKeybindings.h  statePlayConfig.h
source/Vietnamese_Space_Program/Source/: main.cpp
source/Vietnamese_Space_Program/Source/Core/: machine.cpp
source/Vietnamese_Space_Program/Source/Entities/: boss1.cpp  enemy.cpp  healthPack.cpp  shieldEntity.cpp
source/Vietnamese_Space_Program/Source/States/: stateGameMode1.cpp  stateGameMode2.cpp  stateGameOver.cpp  stateHelp.cpp  stateHighscore.cpp  stateMainMenu.cpp
